# trakbridge

./: .env  .env.development  .env.production  .env.testing  .gitignore  .gitlab-ci.yml  CHANGELOG  CLAUDE.md  Dockerfile  QUEUE_IMPLEMENTATION_STATUS.md  README.md  RELEASE_NOTES.md  SECURITY_REMEDIATION_ROADMAP.md  SECURITY_VULNERABILITY_REPORT.md  app.py  benchmark_phase1a.py  builtin-tls-spec.md  config.py  curl-format.txt  database.py  debug_migration_check.py  demo_queue_replacement.py  docker-compose-dev.yml  docker-compose.staging.yml  docker-compose.yml  gunicorn.conf.py  hypercorn.toml  icon_downloader.py  integration-test-results.xml  phase3-migration-spec.md  pyproject.toml  queue_spec.md  requirements.txt  simple_cot_mode_test.py  spec.md  standalone_runner.py  test-dynamic-user.sh  test_checkbox_form.html  test_config_bounce_fix.py  test_cot_type_mode_fix.py  (+7 more)
.claude/agents/: docs-updater.md
config/: __init__.py  authentication_loader.py  base.py  environments.py  monitor.py  queue_config.yaml  schema.py  secrets.py  validators.py
config/settings/: app.yaml  authentication.yaml  authentication.yaml.example  authentication.yaml.template  cot_types.yaml  database.yaml  logging.yaml  performance.yaml  plugins.yaml  threading.yaml
docker/: build.sh  entrypoint.sh  init-secrets.sh  setup.sh
docker/nginx/: nginx.conf
docs/: ADMINISTRATOR_GUIDE.md  API_REFERENCE.md  AUTHENTICATION.md  CLI_SECURITY_POLICY.md  DOCKER_AUTHENTICATION_SETUP.md  DOCKER_HUB_README.md  DOCKER_PLUGINS.md  DOCKER_SECURITY.md  DOCUMENTATION_PLAN.md  GITLAB_CICD_GUIDE.md  INSTALLATION.md  JSON_VALIDATION_SECURITY.md  LDAP_DOCKER_SECRETS.md  PERFORMANCE_CONFIGURATION.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SECURITY.md  SECURITY.md  SECURITY_ANALYSIS.md  SLACK_INTEGRATION.md  TESTING_GUIDE.md  UPGRADE_GUIDE.md  USER_GUIDE.md  index.md
docs/example_external_plugins/: README.md  sample_custom_tracker.py
external_config/: plugins.yaml
init/: setup.sh
init/nginx/: nginx.conf
migrations/: DATABASE_COMPATIBILITY.md  MIGRATION_ORDER.md  NAMING_CONVENTION.md  add_stream_fields.py  migration_utils.py
migrations/versions/: 0a9c5469abc6_add_authentication_tables_for_users_and_.py  3120f5bf60a4_add_provider_field_to_user_sessions_.py  add_callsign_mapping_tables.py  add_database_performance_indexes.py  add_enabled_column_indexes.py  add_enabled_column_to_callsign_mappings.py  add_stream_config_version.py  add_stream_tak_servers_junction.py  add_team_member_fields_to_callsign_mappings.py  add_timezone_to_user_sessions.py  c530e1fd8e8d_add_tls_version_selection_to_tak_servers.py  consolidated_config_version_migration.py  consolidated_initial_migration.py  e2f64ceef0b8_add_cot_type_mode_column_to_streams_.py  e9acb9c4d898_merge_multiple_heads_for_phase_2_worker_.py  eff2e20f64e2_add_config_version_field_to_streams_.py  f085153337e8_merge_multiple_heads_for_v1_0_0_rc_5_.py  merge_heads_migration.py
models/: __init__.py  callsign_mapping.py  dto.py  stream.py  tak_server.py  user.py
plugins/: __init__.py  base_plugin.py  deepstate_plugin.py  garmin_plugin.py  plugin_manager.py  spot_plugin.py  traccar_plugin.py
routes/: __init__.py  admin.py  api.py  auth.py  cot_types.py  health.py  main.py  streams.py  tak_servers.py
scripts/: deploy.sh  diagnose_migration.sh  gitlab-setup.sh  health-check.sh  icon_downloader.py  rotate_keys.py  setup.sh  test-database.sh
services/: __init__.py  circuit_breaker.py  config_cache_service.py  connection_test_service.py  cot_service.py  cot_service_integration.py  cot_type_service.py  database_manager.py  device_state_manager.py  encryption_service.py  exceptions.py  health_service.py  key_rotation_service.py  logging_service.py  phase3_integration.py  plugin_category_service.py  queue_manager.py  queue_monitoring.py  queue_performance_optimizer.py  recovery_implementations.py  recovery_service.py  session_manager.py  stream_config_service.py  stream_display_service.py  stream_manager.py  stream_operations_service.py  stream_status_service.py  stream_worker.py  tak_servers_service.py  unified_config_service.py  version.py  worker_coordination_service.py
services/auth/: __init__.py  auth_manager.py  base_provider.py  bootstrap_service.py  decorators.py  ldap_provider.py  local_provider.py  oidc_provider.py
services/cli/: version_commands.py
static/: site.webmanifest
static/css/: google-fonts.css
templates/: base.html  cot_types.html  create_stream.html  create_tak_server.html  edit_stream.html  edit_tak_server.html  index.html  startup.html  stream_detail.html  streams.html  tak_server_detail.html  tak_servers.html
templates/admin/: about.html  dashboard.html  key_rotation.html
templates/auth/: admin_create_user.html  admin_edit_user.html  admin_user_detail.html  admin_users.html  change_password.html  edit_profile.html  error.html  force_password_change.html  login.html  profile.html
templates/errors/: 404.html  500.html  503.html  base_error.html
test-reports/: sqlite-test-report.json
tests/: README_SECURITY_TESTS.md  conftest.py  docker-compose.test.yml  run_security_tests.py  test_api_team_member.py  test_auth_cli.py  test_authentication.py  test_callsign_mapping.py  test_cot_team_member.py  test_phase3a_config_migration.py  test_phase3a_database_migration.py  test_phase3a_integration.py  test_phase3a_logging_migration.py  test_phase3b_plugin_migration.py  test_plugin_categorization.py  test_plugin_team_member.py  test_secure_auth_integration.py  test_security_fixes.py
tests/e2e/: __init__.py  test_multi_worker_coordination.py
tests/fixtures/: ldap-test-data.ldif  mock_location_data.py
tests/integration/: __init__.py  test_basic_integration.py  test_callsign_integration.py  test_database_compatibility.py  test_form_submission.py  test_mariadb11_connectivity.py  test_mariadb11_integration.py  test_multi_worker_coordination.py  (+8 more)
utils/: __init__.py  app_helpers.py  config_helpers.py  config_manager.py  cot_check.py  cot_test_helpers.py  database_error_formatter.py  database_helpers.py  db_utils.py  json_validator.py  security_helpers.py
(+73 files in other folders)
