[project]
name = "trakbridge"
dynamic = ["version"]
description = "TrakBridge Feed Streaming Platform"
authors = [{ name = "Emfour Solutions", email = "support@emfoursolutions.com.au" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "alembic",
    "arrow",
    "attrs",
    "blinker",
    "certifi",
    "cffi",
    "click",
    "cryptography",
    "fastkml",
    "Flask",
    "Flask-Migrate",
    "Flask-SQLAlchemy",
    "frozenlist",
    "gunicorn",
    "gevent",
    "hypercorn[uvloop,h2,quic]",
    "idna",
    "itsdangerous",
    "Jinja2",
    "lxml",
    "Mako",
    "MarkupSafe",
    "multidict",
    "propcache",
    "psutil",
    "psycopg2-binary",
    "pycparser",
    "pygeoif",
    "PyMySQL",
    "pytak",
    "python-dateutil",
    "python-dotenv",
    "PyYAML",
    "setuptools",
    "setuptools-scm",
    "six",
    "SQLAlchemy",
    "types-python-dateutil",
    "watchdog",
    "Werkzeug",
    "yarl"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-html>=3.1.0",
    "pytest-json-report>=1.5.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "factory-boy>=3.2.0",
    "faker>=18.0.0",
    "responses>=0.23.0",
    "httpx>=0.24.0",
    "coverage>=7.0.0",
    "bump2version",
    "pre-commit",
    "setuptools-scm>=8.0.0"
]

[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["services*", "routes*", "models*", "plugins*", "config*", "tests*"]

# Dynamic versioning with setuptools-scm
[tool.setuptools_scm]
# Generate version file for runtime access
write_to = "_version.py"
write_to_template = '''
# coding: utf-8
# file generated by setuptools_scm
# don't change, don't track in version control
__version__ = version = "{version}"
__version_tuple__ = version_tuple = {version_tuple}
'''

# Root directory should be auto-detected, but we can be explicit
root = "."

# Simplified tag pattern - matches any tag starting with v
tag_regex = '^v(?P<version>[^+]+)(?P<sep>[+-]?)(?P<local>.*)$'

# Fallback version for when no tags are found
fallback_version = "0.1.0.dev0"

# Use no-guess-dev for cleaner version numbers
version_scheme = "no-guess-dev"

# Use node-and-date for local version identifier
local_scheme = "node-and-date"

# Don't normalize version (keep original format)
normalize = false